<?xml version='1.0' encoding='UTF-8'?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
      <groupId>org.infinispan</groupId>
      <artifactId>infinispan-commons-parent</artifactId>
      <version>16.2.0-SNAPSHOT</version>
      <relativePath>../pom.xml</relativePath>
   </parent>

   <artifactId>infinispan-commons-jdk25</artifactId>
   <packaging>jar</packaging>
   <name>Infinispan Commons JDK 25</name>
   <description>Infinispan Commons JDK 25</description>

   <properties>
      <maven.compiler.source>25</maven.compiler.source>
      <maven.compiler.target>25</maven.compiler.target>
      <maven.compiler.release>25</maven.compiler.release>
   </properties>

   <dependencies>
      <dependency>
         <groupId>org.infinispan</groupId>
         <artifactId>infinispan-commons-spi</artifactId>
         <version>${project.version}</version>
         <scope>provided</scope>
      </dependency>
   </dependencies>

   <build>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-deploy-plugin</artifactId>
            <configuration>
               <skip>true</skip>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
               <compilerArgs>
                  <arg>--add-modules</arg>
                  <arg>jdk.incubator.vector</arg>
               </compilerArgs>
            </configuration>
         </plugin>
      </plugins>
   </build>
</project>
